feat: complete module web worker example

--- a/packages/classic_worker/index.html
+++ b/packages/classic_worker/index.html
@@ -7,7 +7,7 @@
     <title>Classic Worker</title>
 </head>
 <body>
-    <h1>Fibonacci</h1>
+    <h1>Fibonacci（Classic Worker）</h1>
     <button onclick="bindClickEvt(10)">10</button>
     <button onclick="bindClickEvt(20)">20</button>
     <button onclick="bindClickEvt(30)">30</button>
