--- a/packages/module_worker/index.html
+++ b/packages/module_worker/index.html
@@ -7,6 +7,15 @@
     <title>Module Worker</title>
 </head>
 <body>
-    
+    <h1>Fibonacci（Module Worker）</h1>
+    <button onclick="bindClickEvt(10)">10</button>
+    <button onclick="bindClickEvt(20)">20</button>
+    <button onclick="bindClickEvt(30)">30</button>
+    <button onclick="bindClickEvt(40)">40</button>
+    <button onclick="bindClickEvt(50)">50</button>
+    <div style="margin-top: 12px;">
+        Result: <span id="calu-wrapper"></span>
+    </div>
+    <script type="module" src="./src/main_thread.ts"></script>
 </body>
 </html>
